--- a/backend/.env-sample
+++ b/backend/.env-sample
@@ -10,3 +10,17 @@ EMAIL_BACKEND='django.core.mail.backends.smtp.EmailBackend'
 EMAIL_HOST_USER='Email'
 EMAIL_HOST_PASSWORD='App Password'
 EMAIL_USE_TLS=True
+
+# PostgreSQL Container Configration
+POSTGRES_DB=postgres_db
+POSTGRES_USER=postgres_user
+POSTGRES_PASSWORD=postgres_password
+
+
+# Database Configration
+DB_ENGINE=django.db.backends.postgresql_psycopg2
+DB_NAME=postgres_db
+DB_USER=postgres_user
+DB_PASSWORD=postgres_password
+DB_PORT=5432
+DB_HOST=db
