Add Social Authentication with use Corsheaders

--- a/backend/.env
+++ b/backend/.env
@@ -16,7 +16,6 @@ POSTGRES_DB=postgres_db
 POSTGRES_USER=postgres_user
 POSTGRES_PASSWORD=postgres_password
 
-
 # Database Configration
 DB_ENGINE=django.db.backends.postgresql_psycopg2
 DB_NAME=postgres_db
@@ -24,3 +23,7 @@ DB_USER=postgres_user
 DB_PASSWORD=postgres_password
 DB_PORT=5432
 DB_HOST=db
+
+# Call_back_Url Configration
+CALLBACK_URL_GOOGLE=
+CALLBACK_URL_GITHUB=
