--- a/src/.env
+++ b/src/.env
@@ -27,3 +27,9 @@ DB_HOST=db
 # Call_back_Url Configration
 CALLBACK_URL_GOOGLE=
 CALLBACK_URL_GITHUB=
+
+
+# Celery configuration
+CELERY_TIMEZONE=America/Chicago
+BROKER_URL=""
+BACKEND_URL=""
