Update Broker and Backend url

--- a/src/.env
+++ b/src/.env
@@ -31,5 +31,5 @@ CALLBACK_URL_GITHUB=
 
 # Celery configuration
 CELERY_TIMEZONE=America/Chicago
-BROKER_URL=""
-BACKEND_URL=""
+BROKER_URL='redis://redis:6379/0'
+BACKEND_URL='redis://redis:6379/0'
