Some changes for get frontend domain in email verifying

--- a/src/.env
+++ b/src/.env
@@ -33,3 +33,6 @@ CALLBACK_URL_GITHUB=
 CELERY_TIMEZONE=America/Chicago
 BROKER_URL='redis://redis:6379/0'
 BACKEND_URL='redis://redis:6379/0'
+
+# Url
+FRONTEND_URL=http://localhost:3000
